--- a/Assignment1/report/report.tex
+++ b/Assignment1/report/report.tex
@@ -10,7 +10,7 @@
 \author{
     \begin{tabular}{r l}
         Erik Hajnal & \texttt{[bgh618]} \\
-        Rasmus Friis & \texttt{[\todo{your KU ID}]}
+        Rasmus Friis & \texttt{[gjv249]}
     \end{tabular}
 }
 
@@ -34,5 +34,72 @@ We implemented this task in two different ways: first by showing a JavaScript-or
 The picture displayed in the upper right corner is created as an \texttt{img} tag after the document has finished loading. Its position (via the \texttt{right} and \texttt{top} CSS properties) was set immediately after creation, as well as its positioning set to \texttt{fixed}. As applying these rules have a one-time effect, we registered two event handlers for scrolling and resizing the window to ensure that the picture always stays in the top right corner. We used the \texttt{jQuery} to implement this.
 
 For the bottom right picture, we created a CSS rule on the class \texttt{task2}, which set the picture as the background image for the body, disabled its repeating and set its position to the bottom right corner, as well as setting its attachment so that it scrolls with the body. When the document was loaded, we used jQuery to set the class on the body.
+
+\todo{interesting pictures}
+
+\section*{Task 3 - Visualisations}
+
+\subsection*{Scale of the Universe}
+
+Link: \url{http://scaleofuniverse.com/}
+
+\vspace{1em}
+\noindent
+\textbf{Positives:}
+This page is extremely good at introducing the viewer to the substance of the data -- sizes. As everything is visualized in relation to other things and a steady scaling of size, the viewer easily grasps the content of the data.
+
+The data set is very compact, and even includes text entries about the different objects when clicked upon. Very intuitive, and speaks in a language that is easy for most to understand.
+
+\vspace{1em}
+\noindent
+\textbf{Negatives:} has some rather unscientific text entries throughout the descriptions,
+and most of the entries are drawn by hand, giving them some inconsistency, i.e. the somewhat 'cartoonish' style might not convince all readers.
+
+\subsection*{Sea of Steel}
+
+Link: \url{http://visual.ly/sea-steel}
+
+\vspace{1em}
+\noindent
+\textbf{Positives:} The Sea of Steel Interactive visualization shows a heatmap of gun confiscations in Washington D.C. and the surrounding areas in the USA.
+A heatmap is a great way of presenting concentrations of data, and one of the most interesting statistics in this data set is where the concentrated parts of the gun confiscating occurs.
+It is possible to click any part, to see the breakdown of guns confiscated in that area, which shows the detail of the data set.
+
+\vspace{1em}
+\noindent
+\textbf{Negatives:}
+The data isn't presented in a particularly compact fashion, and a lot of the key information is written below the visualization, making it somewhat difficult to get a clear overview without hunting for the various pieces of the data.
+
+\subsection*{Jobs report}
+
+Link: \url{http://visual.ly/what-jobs-report-really-means}
+
+\vspace{1em}
+\noindent
+\textbf{Positives:}
+The jobs report visualisation deals with various aspects of the job market in the US, as well as other graphs that have to do with the effects of recession. It shows the depressions in the economy very well, and gives numbers in a quite good level of detail. It also includes a walkthrough of the data which might help people understand what the graphs are trying to show.
+
+\vspace{1em}
+\noindent
+\textbf{Negatives:}
+The visualisation isn't very free-to-explore (because of the walkthrough), and is mainly a narrative which shows the interesting parts, without letting the viewer conclude for themselves.
+
+\subsection*{Open Street Maps}
+
+Link: \url{https://www.openstreetmap.org}
+
+\vspace{1em}
+\noindent
+Not so much a visualisation of specific data, but a visualisation of data nonetheless.
+
+\vspace{1em}
+\noindent
+\textbf{Positives:}
+Various levels of information: you can look for directions in a specific village, but you can also refresh your geography knowledge by zooming out and looking at the global/continental level. A lot of the data comes from individuals that help build the database, which keeps it somewhat up to date.
+
+\vspace{1em}
+\noindent
+\textbf{Negatives:}
+Builds heavily on conventions, but doesn't describe them: figuring out what the different types of colours or icons mean is difficult. The community-based approach can also lead to malicious manipulation. Unclear language (layers, query features, GPS traces) with no immediate explanation.
 
 \end{document}
